--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,9 @@ Thumbs.db
 [Aa]ssets/[Pp]lugins/[Uu]niTask
 [Aa]ssets/[Pp]lugins/[Uu]niTask.meta
 
+[Aa]ssets/[Pp]lugins/[Uu]niRx
+[Aa]ssets/[Pp]lugins/[Uu]niRx.meta
+
 [Aa]ssets/[Gg]itIgnoreAssets/
 [Aa]ssets/[Gg]itIgnoreAssets.meta
 
